<resources>
    <string name="app_name">flow_project</string>
    <string name="users_activity">USERS ACTIVITY</string>
    <string name="launch_next_screen">LAUNCH NEXT SCREEN</string>
    <string name="enter_username">Enter username</string>
    <string name="add_user">ADD USER</string>
    <string name="crypto_activity">CRYPTO ACTIVITY</string>
    <string name="refresh">Refresh</string>
    <string name="team_score_activity">TEAM SCORE ACTIVITY</string>
    <string name="team1">Team1</string>
    <string name="team2">Team2</string>
</resources>