<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/bt_users_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/users_activity" />

    <Button
        android:id="@+id/bt_crypto_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crypto_activity" />

    <Button
        android:id="@+id/bt_game_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/team_score_activity" />

</androidx.appcompat.widget.LinearLayoutCompat>