<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/tv_users"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_purple"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Nick, Join, Max" />

    <EditText
        android:id="@+id/et_input_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/enter_username"
        app:layout_constraintBottom_toTopOf="@+id/bt_add_user"
        android:autofillHints="username"
        android:inputType="text" />

    <Button
        android:id="@+id/bt_add_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_user"
        app:layout_constraintBottom_toTopOf="@+id/bt_launch_next_screen" />

    <Button
        android:id="@+id/bt_launch_next_screen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/launch_next_screen"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>